final plots and time series analysis

--- a/reddit-analysis/add_reddit_results.ipynb
+++ b/reddit-analysis/add_reddit_results.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "df4e8072",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import math"
+    "import math\n",
+    "import numpy as np\n",
+    "from collections import Counter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "efc5ab58",
    "metadata": {},
    "outputs": [],
@@ -26,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "17ff304a",
    "metadata": {},
    "outputs": [
@@ -437,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "d08dfd29",
    "metadata": {},
    "outputs": [
@@ -474,7 +476,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "c5e6729e",
    "metadata": {},
    "outputs": [
@@ -715,7 +717,7 @@
        "[6715 rows x 9 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,18 +753,84 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "id": "01304462",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Conservative', 597),\n",
+       " ('TheNewsFeed', 592),\n",
+       " ('TrendingQuickTVnews', 518),\n",
+       " ('AutoNewspaper', 452),\n",
+       " ('BreitbartNews', 292),\n",
+       " ('NewsWhatever', 287),\n",
+       " ('politics', 271),\n",
+       " ('FOXauto', 264),\n",
+       " ('conservatives', 210),\n",
+       " ('ConservativesOnly', 101),\n",
+       " ('Republican', 91),\n",
+       " ('AnythingGoesNews', 83),\n",
+       " ('ExDemFoyer', 83),\n",
+       " ('NEWPOLITIC', 72),\n",
+       " ('nofeenews', 63)]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# most common subreddits\n",
+    "Counter(reddit_posts['subreddit']).most_common(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "2c392e8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "median num subs: 3275.0\n",
+      "mean num subs: 767246.7014147431\n",
+      "median num comments 0.0\n",
+      "mean num comments 15.062397617274758\n",
+      "range 0 - 2997\n",
+      "mean score 67.19285182427402\n"
+     ]
+    }
+   ],
+   "source": [
+    "# mean subreddit subscribers\n",
+    "print(\"median num subs:\", np.median(reddit_posts['subreddit_subscribers']))\n",
+    "print(\"mean num subs:\", np.mean(reddit_posts['subreddit_subscribers']))\n",
+    "print(\"median num comments\", np.median(reddit_posts['num_comments']))\n",
+    "print(\"mean num comments\", np.mean(reddit_posts['num_comments']))\n",
+    "print(\"range\", min(reddit_posts['num_comments']), \"-\", max(reddit_posts['num_comments']))\n",
+    "print(\"mean score\", np.mean(reddit_posts['score']))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "692b8b91",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# WRITE TO FILE\n",
     "# reference: https://stackoverflow.com/questions/40470954/convert-pandas-dataframe-to-nested-json\n",
-    "j = (reddit_posts.groupby(['url'])\n",
-    "     .apply(lambda x: x[['subreddit', 'subreddit_subscribers', 'subreddit_id', 'created_utc', \n",
-    "                    'title', 'num_comments', 'score', 'upvote_ratio']].to_dict('records'))\n",
-    "     .reset_index()\n",
-    "     .rename(columns={0:'post_data'})\n",
-    "     .to_json(\"../reddit_post_data.json\", orient=\"records\"))"
+    "# j = (reddit_posts.groupby(['url'])\n",
+    "#      .apply(lambda x: x[['subreddit', 'subreddit_subscribers', 'subreddit_id', 'created_utc', \n",
+    "#                     'title', 'num_comments', 'score', 'upvote_ratio']].to_dict('records'))\n",
+    "#      .reset_index()\n",
+    "#      .rename(columns={0:'post_data'})\n",
+    "#      .to_json(\"../reddit_post_data.json\", orient=\"records\"))"
    ]
   },
   {
